--- a/bombers_revenge/memorygame/style.css
+++ b/bombers_revenge/memorygame/style.css
@@ -1,29 +1,109 @@
 *{
+	margin:0;
 	padding: 0;
-	margin: 0;
 	box-sizing: border-box;
 	font-family: sans-serif;
 }
 
 body{
-	background-color: #000000 ;
+	margin: 0px;
+	padding: 0px;
 }
-
+h1{
+	color: rgb(255,255,255);
+}
+.container{
+	width: 800px;
+	height: 480px;
+	background-color: black;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 .wrapper{
-	box-sizing: border-box;
-	width:25em;
-	padding:2.5em 3em;
-	background-color: #ffffff;
-	position: absolute;
-	transform: translate(-50%, -50%);
-	left: 50%;
-	top: 50%;
-	border-radius: 0.5em;
-	box-shadow: 0 1em 3em  rgba(86, 66, 0, 0.2);
+	height:400px;
+	width:500px;
+	padding: 15px;
+	background: #949494;
+	border-radius: 10px;
 }
 
-.game-container{
-	position: relative;
+.cards, .card, .view{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.cards{
+	height: 100%;
 	width: 100%;
-	display: grid;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.cards .card{
+	cursor: pointer;
+	position: relative;
+	perspective: 800px;
+	transform-style: preserve-3d;
+	height: calc(100% / 4 - 10px);
+	width: calc(100% / 5 - 10px);
+
+}
+
+.card.shake{
+	animation: shake 0.35s ease-in-out;
+}
+@keyframes shake{
+	0%, 100%{
+		transform: translateX(0);
+	}
+	20%{
+		transform: translateX(-13px);
+	}
+	40%{
+		transform: translateX(13px);
+	}
+	60%{
+		transform: translateX(-8px);
+	}
+	80%{
+		transform: translateX(8px);
+	}
+}
+
+.cards .card .view{
+	width: 100%;
+	height: 100%;
+	user-select: none;
+	pointer-events: none;
+	position: absolute;
+	background: black;
+	border-radius: 7px;
+	backface-visibility: hidden;
+	transition: transform 0.25s linear;
+	box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+}
+
+.card .front-view span{
+	color: #949494;
+	font-size: 50px;
+}
+
+.card .back-view{
+	transform: rotateY(-180deg);
+}
+
+.card .back-view img{
+	max-width:150px;
+	max-height: 150px;
+}
+
+.card.flip .front-view{
+	transform: rotateY(180deg);
+}
+
+.card.flip .back-view{
+	transform: rotateY(0);
 }
