--- a/bombers_revenge/memorygame/style.css
+++ b/bombers_revenge/memorygame/style.css
@@ -3,11 +3,13 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: sans-serif;
+	cursor: none;
 }
 
 body{
 	margin: 0px;
 	padding: 0px;
+	
 }
 h1{
 	color: rgb(255,255,255);
@@ -20,6 +22,7 @@ h1{
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	
 }
 .wrapper{
 	height:400px;
